Add user progress to user_enrolled
